# Snake

./: CMakeLists.txt  README.md
header/: game.h  snake.h  window.h  world.h
src/: game.cpp  main.cpp  snake.cpp  window.cpp  world.cpp
